<resources>

    <string name="app_name">天天记账</string>

    <!--侧边导航栏文本定义-->
    <string name="text_nav_main">主页</string>
    <string name="text_nav_chart">分析统计</string>
    <string name="text_nav_assets">资产管理</string>
    <string name="text_nav_sort">分类管理</string>
    <string name="text_nav_self">个人中心</string>
    <string name="text_nav_site">设置</string>
    <string name="text_nav_about">关于</string>

    <!--记账主页面文本定义-->
    <string name="text_all_assets">剩余预算(¥)</string>
    <string name="text_month_income">本月收入(¥)</string>
    <string name="text_month_outlay">本月支出(¥)</string>

</resources>
